--- a/packages/todos_api/pubspec.yaml
+++ b/packages/todos_api/pubspec.yaml
@@ -10,3 +10,10 @@ dev_dependencies:
   mocktail: ^0.3.0
   test: ^1.19.2
   very_good_analysis: ^3.1.0
+  build_runner: ^2.3.3
+  json_serializable: ^6.6.0
+dependencies:
+  equatable: ^2.0.5
+  json_annotation: ^4.8.0
+  meta: ^1.8.0
+  uuid: ^3.0.7
