--- a/packages/todos_repository/pubspec.yaml
+++ b/packages/todos_repository/pubspec.yaml
@@ -10,3 +10,7 @@ dev_dependencies:
   mocktail: ^0.3.0
   test: ^1.19.2
   very_good_analysis: ^3.1.0
+
+dependencies:
+  todos_api:
+    path: ../todos_api
